fixing url address bar jump

--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -38,7 +38,7 @@ p {
 }
 .hero-background {
    width: 100%;
-   height: 100%;
+   height: 100vh;
    z-index: -10;
    position: absolute;
    top: 0;
@@ -59,9 +59,10 @@ p {
 
 .hero-nav {
    position: absolute;
-   width: 100%;
-   bottom: 0;
    left: 0;
+   right: 0;
+   top: 100%;
+   transform: translateY(-100%);
    color: white;
    text-transform: uppercase;
    background: transparent;
@@ -69,11 +70,12 @@ p {
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
-   padding: 6px 1%;
+   padding: 0.8% 1%;
    z-index: 100;
    letter-spacing: 2px;
    // transition: padding 0.6s;
    transition: background 0.6s;
+   // transition: 0.6s all;
    p {
       width: 7%;
       // text-align: center;
@@ -122,8 +124,10 @@ p {
 .hero-nav-fixed {
    background: #1c2033;
    position: fixed;
-   bottom: 100%;
-   transform: translateY(100%);
+   top: 0;
+   transform: translateY(0);
+   // bottom: 100%;
+   // transform: translateY(100%);
    // padding: 2px 40px;
 }
 
@@ -185,7 +189,7 @@ p {
       width: 100%;
       max-width: 950px;
       margin: 0 auto;
-      padding: 4.5% 5% 5% 5%;
+      padding: 75px 5% 75px 5%;
       h1 {
          text-transform: uppercase;
          border-bottom: 2.5px solid $aqua;
@@ -220,6 +224,7 @@ p {
 }
 .portfolio-item:nth-of-type(even) {
    background: #333856;
+   flex-direction: row-reverse;
    .portfolio-image {
       margin-right: 2%;
       margin-left: 0;
@@ -236,12 +241,15 @@ p {
    color: white;
    // height: 60vh;
    background: #2E3450;
-   padding: 0 3%;
+   padding: 10px 3%;
    .portfolio-image {
       flex: 1 0 40%;
       // background: lightpink;
       margin-left: 2%;
       // border: 20px solid rgba(0,0,0,0.79);
+      a {
+         @include flex;
+      }
       img {
          width: 100%;
          height: 100%;
@@ -257,12 +265,21 @@ p {
       h2 {
          margin-bottom: 15px;
          // border-top: 3px solid white;
-         border-left: 3.5px solid $aqua;
+         // border-left: 3.5px solid $aqua;
          // border-right: 3px solid white;
-         padding: 15px 20px;
+         padding: 0px 20px;
          font-size: 1.8rem;
          align-self: flex-start;
          text-transform: uppercase;
+         position: relative;
+         &:before {
+            content: '';
+            position: absolute;
+            left: 0;
+            width: 4px;
+            height: calc(100% - 2px);
+            background: $aqua;
+         }
       }
       p {
          // margin-bottom: 5%;
@@ -308,16 +325,14 @@ p {
             height: 25px;
             background: $purpletwo;
             position: absolute;
-            left: -13px;
+            left: -12px;
             transform: translateY(-50%);
             top: 50%;
          }
       }
    }
 }
-.portfolio-button {
-   margin-top: 20px;
-}
+.porf
 .portfolio .portfolio-item:nth-of-type(even) {
    flex-direction: row-reverse;
 }
@@ -350,18 +365,27 @@ p {
    width: 100%;
    max-width: 950px;
    margin: 0 auto;
-   padding: 5% 5% 3.5%;
+   padding: 75px 5% 40px;
    h3 {
       font-size: 2.5rem;
-      border-left: 4px solid $aqua;
+      // border-left: 4px solid $aqua;
+      position: relative;
       padding-left: 20px;
       margin-bottom: 45px;
+      &:before {
+         content: '';
+         position: absolute;
+         left: 0;
+         width: 4px;
+         height: calc(100% - 2px);
+         background: $aqua;
+      }
    }
 }
 .skills-section {
    color: white;
    position: relative;
-   // padding: 3% 0;
+   // padding: 25px 0;
    .skills-wrapper {
       display: flex;
       flex-direction: column;
@@ -422,6 +446,19 @@ p {
    p {
       font-size: 1.2rem;
       margin-bottom: 35px;
+      i {
+         margin-right: 15px;
+      }
+      a {
+         text-decoration: none;
+         color: inherit;
+         font-family: 'Raleway';
+         letter-spacing: 2px;
+         transition: 0.5s;
+         &:hover {
+            color: $aqua;
+         }
+      }
    }
    ul {
       margin: 0;
@@ -447,7 +484,7 @@ p {
 }
 .footer-wrapper .social-links {
    margin-left: 40px;
-   width: calc(30% - 40px);
+   width: calc(40% - 40px);
    flex-direction: column;
    // justify-content: space-between;
    // height: 80%;
@@ -473,6 +510,9 @@ p {
          font-size: 0.8rem;
          margin-right: 10px;
       }
+   }
+   li:last-of-type {
+      letter-spacing: 1px;
    }
 }
 #email-copy {
@@ -514,7 +554,7 @@ p {
    display: flex;
    flex-wrap: wrap;
    form {
-      width: 70%;
+      width: 60%;
       display: flex;
       flex-wrap: wrap;
       input, textarea {
@@ -596,7 +636,7 @@ p {
 
    .about-me {
       .about-content {
-         padding: 20% 5%;
+         padding: 75px 5%;
       }
    }
    .portfolio-item {
@@ -604,7 +644,7 @@ p {
       flex-direction: column-reverse;
       padding: 0;
       .portfolio-description {
-         padding: 20% 3% 5% 3%;
+         padding: 75px 3% 5% 3%;
       }
       .portfolio-image {
          margin: 0;
@@ -619,11 +659,11 @@ p {
    }
    .skills-section {
       .skills-full {
-         padding: 20% 5% 17% 5%;
+         padding: 75px 5% 55px 5%;
       }
    }
    .footer-wrapper {
-      padding: 20% 5% 18% 5%;
+      padding: 75px 5% 55px 5%;
    }
    .skills-section .skills-style ul li {
       width: 19%;
@@ -671,6 +711,17 @@ p {
       // }
       li:nth-of-type(3), li:nth-of-type(4) {
          margin-bottom: 0;
+      }
+   }
+}
+
+@media (max-width: 640px) {
+   .footer-wrapper .social-links {
+      li {
+         flex: 1 0 100%;
+      }
+      li:last-of-type {
+         margin-top: 35px;
       }
    }
 }
